--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -100,7 +100,7 @@ opacity: 0.8;}
 
 .over, .hover{cursor: pointer;}
 
-.choice {cursor: pointer;}
+.answers {cursor: pointer;}
 
 .next{
 width: 200px;
